fixed mobile menu size for visible header

--- a/src/components/Header/MobileMenu/mobile-menu.module.css
+++ b/src/components/Header/MobileMenu/mobile-menu.module.css
@@ -5,7 +5,7 @@
   place-items: stretch;
 
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 55px);
   background: var(--bg);
 }
 
